[tool.poetry]
name = "dowhy"
version = "0.0.1"
description = "DoWhy is a Python library for causal inference that supports explicit modeling and testing of causal assumptions."
authors = ["Amit Sharma", "Emre Kiciman"]
license = "MIT"
readme = "README.rst"
exclude = ["tests", "docs"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.4"
scipy = "^1.8.1"
statsmodels = "^0.13.2"
pandas = "^1.4.2"
networkx = "^2.8.3"
sympy = "^1.10.1"
scikit-learn = "=1.0.2"
pydot = "^1.4.2"
tqdm = "^4.64.0"
econml = {version = "^0.13.0", optional = true}
matplotlib = {version = "^3.5.2", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.3.0"
flaky = "^3.7.0"
jupyter = "^1.0.0"
nbformat = "^5.4.0"
isort = "^5.10.1"
tensorflow = {version = "^2.9.1", optional = true}
keras = {version = "^2.9.0", optional = true}
rpy2 = {version = "^3.5.2", optional = true}
xgboost = {version = "^1.6.1", optional = true}

[tool.poetry.extras]
econml = ["econml"]
plotting = ["matplotlib"]
tests = ["econml", "matplotlib"]
advanced = ["tensorflow", "keras", "rpy2", "xgboost"]

[tool.pytest.ini_options]
markers = [
    "advanced: not be to run each time. only on package updates.",
    "notebook: jupyter notebook marker."
]

[tool.black]
target-version = ['py36']
force-exclude = '''
.*/setup\.py$
'''

[tool.isort]
py_version = 36
profile = "black"
force_single_line = false
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["dowhy", "tests"]
extend_skip = ["setup.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
